--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   sm:inline-block
                   sm:w-auto
                 "
-                href="assets/Katherine_Beck_Resume.pdf"
+                href="assets/Resume.pdf"
                 target="_blank"
                 ><span class="text-xl mr-3"
                   ><i class="fas fa-file-alt"></i></span
@@ -316,7 +316,7 @@
             <div class="flex flex-col justify-center">
                 <div class="shrink-0">
                   <img
-                    src="./assets/8_bastion_components.png"
+                    src="./assets/Bastion_components.png"
                     class="block h-xl sm:h-2xl mx-auto pr-16 pl-8 pb-12"
                     alt="Bastion Overview"
                   />
@@ -330,7 +330,7 @@
             <div class="flex flex-col justify-center">
                 <div class="shrink-0">
                   <img
-                    src="./assets/7_compare_baas_all.png"
+                    src="./assets/Compare_baas.png"
                     class="block h-xl sm:h-2xl mx-auto pr-16 pb-12"
                     alt="Bastion Overview"
                   />
@@ -616,7 +616,7 @@
             >GitHub
           </a>
           <a
-            href="assets/Katherine_Beck_Resume.pdf"
+            href="assets/Resume.pdf"
             target="_blank"
             class="
               w-2/5
