--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <i class="fab fa-github"></i>
       </a>
       <a
-        href="assets/Resume.pdf"
+        href="assets/resume2.pdf"
         target="_blank"
         class="
           menuItem
@@ -246,7 +246,7 @@
                   sm:inline-block
                   sm:w-auto
                 "
-                href="assets/Resume.pdf"
+                href="assets/resume2.pdf"
                 target="_blank"
                 ><span class="text-xl mr-3"
                   ><i class="fas fa-file-alt"></i></span
@@ -462,7 +462,7 @@
               <div class="flex-shrink-0 p-4 flex justify-center bg-gray-200">
                 <img
                   class="h-60 drop-shadow-lg filter object-scale-down"
-                  src="assets/Mellow.png"
+                  src="assets/mellow.png"
                   alt=""
                 />
               </div>
@@ -616,7 +616,7 @@
             >GitHub
           </a>
           <a
-            href="assets/Resume.pdf"
+            href="assets/resume2.pdf"
             target="_blank"
             class="
               w-2/5
