--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
               <div class="flex-shrink-0 p-4 flex justify-center bg-gray-200">
                 <img
                   class="h-60 drop-shadow-lg filter object-scale-down"
-                  src="assets/mellow.png"
+                  src="assets/Mellow.png"
                   alt=""
                 />
               </div>
