--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="flex flex-col justify-center">
                 <div class="shrink-0">
                   <img
-                    src="./assets/Compare_baas.png"
+                    src="./assets/compare_baas_.png"
                     class="block h-xl sm:h-2xl mx-auto pr-16 pb-12"
                     alt="Bastion Overview"
                   />
@@ -344,7 +344,7 @@
             <div class="flex flex-col justify-center">
                 <div class="shrink-0">
                   <img
-                    src="./assets/bastion_dashboard.png"
+                    src="./assets/bastion_dashboard_.png"
                     class="block h-xl sm:h-2xl mx-auto pb-12 rounded-lg"
                     alt="Bastion Dashboard and CLI"
                   />
