--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           font-medium
           rounded-md
           text-white
-          bg-bastionblue-500
+          bg-teal
           hover:bg-bastionorange
         "
       >
@@ -68,7 +68,7 @@
           font-medium
           rounded-full
           text-white
-          bg-bastionblue-500
+          bg-teal
           hover:bg-bastionorange
         "
         target="_blank"
@@ -90,7 +90,7 @@
           font-medium
           rounded-full
           text-white
-          bg-bastionblue-500
+          bg-teal
           hover:bg-bastionorange
         "
         target="_blaank"
@@ -112,7 +112,7 @@
           font-medium
           rounded-full
           text-white
-          bg-bastionblue-500
+          bg-teal
           hover:bg-bastionorange
         "
         target="_blank"
@@ -135,7 +135,7 @@
           font-medium
           rounded-full
           text-white
-          bg-bastionblue-500
+          bg-teal
           hover:bg-bastionorange
         "
       >
@@ -166,10 +166,10 @@
               class="absolute inset-x-0 h-1/2 bg-white lg:hidden"
               aria-hidden="true"
             ></div>
-            <div class="max-w-sm mx-auto px-4 sm:px-6 lg:p-0">
-              <div class="aspect-w-6 aspect-h-7">
+            <div class="max-w-[50%] sm:max-w-xs mx-auto px-4 sm:px-6 lg:p-0">
+              <div class="aspect-w-5 aspect-h-6">
                 <img
-                  class="object-cover object-center rounded-full shadow-2xl"
+                  class="object-cover object-center rounded-xl shadow-2xl"
                   src="assets/pavlo.png"
                   alt=""
                 />
@@ -238,7 +238,7 @@
                   py-3
                   px-5
                   text-center
-                  bg-tealcomp 
+                  bg-white 
                   hover:bg-tealoffcomp
                   border border-transparent
                   rounded-md
@@ -250,7 +250,7 @@
                 "
                 href="assets/resume2.pdf"
                 target="_blank"
-                ><span class="text-xl mr-3"
+                ><span class="text-xl mr-3 leading-3"
                   ><i class="fas fa-file-alt"></i></span
                 >Resume</a
               >
@@ -263,7 +263,7 @@
                   py-3
                   px-5
                   text-center
-                  bg-tealcomp
+                  bg-white
                   border border-transparent
                   rounded-md
                   shadow-md
@@ -313,13 +313,13 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner relative w-full overflow-scroll scrollbar-hide">
+        <div class="carousel-inner relative w-full overflow-scroll scrollbar-hide px-4">
           <div class="carousel-item active float-left w-full pb-2">
             <div class="flex flex-col justify-center">
                 <div class="shrink-0">
                   <img
                     src="./assets/Bastion_components.png"
-                    class="block h-xl sm:h-2xl mx-auto pr-16 pl-8 pb-12"
+                    class="block h-xl sm:h-2xl mx-auto pr-16 pl-8 pb-12 object-contain"
                     alt="Bastion Overview"
                   />
                   <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32">
@@ -333,7 +333,7 @@
                 <div class="shrink-0">
                   <img
                     src="./assets/compare_baas_.png"
-                    class="block h-xl sm:h-2xl mx-auto pr-16 pb-12"
+                    class="block h-xl sm:h-2xl mx-auto pr-16 pb-12 object-contain"
                     alt="Bastion Overview"
                   />
                   <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32">
@@ -344,10 +344,10 @@
           </div>
           <div class="carousel-item float-left w-full pb-2">
             <div class="flex flex-col justify-center">
-                <div class="shrink-0">
+                <div class="">
                   <img
                     src="./assets/bastion_dashboard_.png"
-                    class="block h-xl sm:h-2xl mx-auto pb-12 rounded-lg"
+                    class="block h-xl sm:h-2xl mx-auto pb-12 rounded-lg object-contain" 
                     alt="Bastion Dashboard and CLI"
                   />
                   <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32">
@@ -393,7 +393,7 @@
             shadow-md
             text-base
             font-medium
-            hover:bg-yellow-300
+            hover:bg-tealoffcomp
             sm:inline-block
             sm:w-auto
           "
@@ -416,7 +416,7 @@
             shadow-md
             text-base
             font-medium
-            hover:bg-yellow-300
+            hover:bg-tealoffcomp
             sm:inline-block
             sm:w-auto
           "
@@ -559,7 +559,7 @@
               rounded-md
               text-midnightblue
               bg-white
-              hover:bg-gray-300
+              hover:bg-tealoffcomp
               sm:w-auto
             "
             target="_blank"
@@ -584,7 +584,7 @@
               rounded-md
               text-midnightblue
               bg-white
-              hover:bg-gray-300
+              hover:bg-tealoffcomp
               sm:w-auto
             "
             target="_blank"
@@ -609,7 +609,7 @@
               rounded-md
               text-midnightblue
               bg-white
-              hover:bg-gray-300
+              hover:bg-tealoffcomp
               sm:w-auto
             "
             target="_blank"
@@ -635,7 +635,7 @@
               rounded-md
               text-midnightblue
               bg-white
-              hover:bg-gray-300
+              hover:bg-tealoffcomp
               sm:w-auto
             "
           >
