--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           font-medium
           rounded-md
           text-white
-          bg-teal
+          bg-test
           hover:bg-bastionorange
         "
       >
@@ -68,7 +68,7 @@
           font-medium
           rounded-full
           text-white
-          bg-teal
+          bg-test
           hover:bg-bastionorange
         "
         target="_blank"
@@ -90,7 +90,7 @@
           font-medium
           rounded-full
           text-white
-          bg-teal
+          bg-test
           hover:bg-bastionorange
         "
         target="_blaank"
@@ -112,7 +112,7 @@
           font-medium
           rounded-full
           text-white
-          bg-teal
+          bg-test
           hover:bg-bastionorange
         "
         target="_blank"
@@ -135,7 +135,7 @@
           font-medium
           rounded-full
           text-white
-          bg-teal
+          bg-test
           hover:bg-bastionorange
         "
       >
@@ -284,7 +284,7 @@
     </div>
 
     <!-- Bastion -->
-    <div class="bg-gradient-to-r from-rose-400 to-orange-300 4xl:mx-48 4xl:rounded-xl">
+    <div class="bg-gradient-to-r from-rose-400 to-orange-300">
       <div class="flex items-center justify-center py-16 pl-8">
         <img src="./assets/logo_color.png" class="w-48 pl-8"/>
         <p class="text-center text-4xl text-gray-900 pr-12">Backend-as-a-Service Solution</p>
@@ -319,10 +319,10 @@
                 <div class="shrink-0">
                   <img
                     src="./assets/Bastion_components.png"
-                    class="block h-xl sm:h-2xl mx-auto pr-16 pl-8 pb-12 object-contain"
+                    class="block h-xl sm:h-2xl mx-auto pr-16 pl-8 py-4 object-contain bg-white rounded"
                     alt="Bastion Overview"
                   />
-                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32">
+                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32 pt-8">
                     Bastion is an open-source solution that provides a customizeable and scaleable backend, deployable within minutes.
                   </p>
               </div>
@@ -333,10 +333,10 @@
                 <div class="shrink-0">
                   <img
                     src="./assets/compare_baas_.png"
-                    class="block h-xl sm:h-2xl mx-auto pr-16 pb-12 object-contain"
+                    class="block h-xl sm:h-2xl mx-auto px-8 py-4 object-contain bg-white rounded"
                     alt="Bastion Overview"
                   />
-                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32">
+                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32 pt-8">
                     Bastion grants you full ownership and control of your backend, and integrates with AWS to provide flexibility and scaleability on demand.
                   </p>
               </div>
@@ -347,10 +347,10 @@
                 <div class="">
                   <img
                     src="./assets/bastion_dashboard_.png"
-                    class="block h-xl sm:h-2xl mx-auto pb-12 rounded-lg object-contain" 
+                    class="block h-xl sm:h-2xl mx-auto rounded-lg object-contain bg-white" 
                     alt="Bastion Dashboard and CLI"
                   />
-                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32">
+                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32 pt-8 rounded">
                     Users can deploy and manage multiple backends. 
                     Cloud code functionality provided using AWS Lambda allows those backends to be customized to fit the needs of each project.
                   </p>
