--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <i class="fas fa-envelope"></i>
       </a>
       <a
-        href="https://www.linkedin.com/"
+        href="https://www.linkedin.com/in/pavlo-artemenko-799107225/"
         class="
           menuItem
           flex
@@ -568,7 +568,7 @@
             >Email
           </a>
           <a
-            href="https://www.linkedin.com/in/katherine-m-beck"
+            href="https://www.linkedin.com/in/pavlo-artemenko-799107225/"
             class="
               w-2/5
               mt-4
