--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="https://kit.fontawesome.com/7169100a2d.js" crossorigin="anonymous"></script>
     
   </head>
-  <body class="bg-gray-300">
+  <body class="bg-gray-300 overflow-x-hidden">
     <!-- Contact Buttons -->
     <div class="flex flex-col fixed z-50 w-10 md:w-12 lg:w-14 text-2xl space-y-2 top-3 right-3">
       <a
@@ -322,7 +322,7 @@
                     class="block h-xl sm:h-2xl mx-auto pr-16 pl-8 py-4 object-contain bg-white rounded"
                     alt="Bastion Overview"
                   />
-                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32 pt-8">
+                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-60 sm:h-48 lg:h-32 pt-8">
                     Bastion is an open-source solution that provides a customizeable and scaleable backend, deployable within minutes.
                   </p>
               </div>
@@ -336,7 +336,7 @@
                     class="block h-xl sm:h-2xl mx-auto px-8 py-4 object-contain bg-white rounded"
                     alt="Bastion Overview"
                   />
-                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32 pt-8">
+                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-60 sm:h-48 lg:h-32 pt-8">
                     Bastion grants you full ownership and control of your backend, and integrates with AWS to provide flexibility and scaleability on demand.
                   </p>
               </div>
@@ -350,7 +350,7 @@
                     class="block h-xl sm:h-2xl mx-auto rounded-lg object-contain bg-white" 
                     alt="Bastion Dashboard and CLI"
                   />
-                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-48 lg:h-32 pt-8 rounded">
+                  <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-60 sm:h-48 lg:h-32 pt-8 rounded">
                     Users can deploy and manage multiple backends. 
                     Cloud code functionality provided using AWS Lambda allows those backends to be customized to fit the needs of each project.
                   </p>
