--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="https://kit.fontawesome.com/7169100a2d.js" crossorigin="anonymous"></script>
     
   </head>
-  <body class="bg-gray-300 overflow-x-hidden">
+  <body class="bg-gray-300">
     <!-- Contact Buttons -->
     <div class="flex flex-col fixed z-50 w-10 md:w-12 lg:w-14 text-2xl space-y-2 top-3 right-3">
       <a
@@ -285,9 +285,9 @@
 
     <!-- Bastion -->
     <div class="bg-gradient-to-r from-rose-400 to-orange-300">
-      <div class="flex items-center justify-center py-16 pl-8">
+      <div class="flex items-center justify-center py-16 px-8">
         <img src="./assets/logo_color.png" class="w-48 pl-8"/>
-        <p class="text-center text-4xl text-gray-900 pr-12">Backend-as-a-Service Solution</p>
+        <p class="text-center text-4xl text-gray-900">Backend-as-a-Service Solution</p>
       </div>
       
       <div id="carouselIndicators" class="carousel carousel-dark slide relative" data-bs-ride="carousel">
