--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div class="aspect-w-5 aspect-h-6">
                 <img
                   class="object-cover object-center rounded-xl shadow-2xl"
-                  src="assets/pavlo.png"
+                  src="assets/photo_2.png"
                   alt=""
                 />
               </div>
