--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <i class="fab fa-github"></i>
       </a>
       <a
-        href="assets/resume2.pdf"
+        href="assets/resume.pdf"
         target="_blank"
         class="
           menuItem
@@ -248,7 +248,7 @@
                   sm:inline-block
                   sm:w-auto
                 "
-                href="assets/resume2.pdf"
+                href="assets/resume.pdf"
                 target="_blank"
                 ><span class="text-xl mr-3 leading-3"
                   ><i class="fas fa-file-alt"></i></span
@@ -618,7 +618,7 @@
             >GitHub
           </a>
           <a
-            href="assets/resume2.pdf"
+            href="assets/resume.pdf"
             target="_blank"
             class="
               w-2/5
