--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     alt="Bastion Overview"
                   />
                   <p class="block px-8 sm:px-32 text-center text-lg sm:text-xl md:text-2xl h-60 sm:h-48 lg:h-32 pt-8">
-                    Bastion is an open-source solution that provides a customizeable and scaleable backend, deployable within minutes.
+                    Bastion is an open-source solution that provides a customizable and scaleable backend, deployable within minutes.
                   </p>
               </div>
             </div>
