additional styling/padding

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               class="absolute inset-x-0 h-1/2 bg-white lg:hidden"
               aria-hidden="true"
             ></div>
-            <div class="max-w-[50%] sm:max-w-xs mx-auto px-4 sm:px-6 lg:p-0">
+            <div class="max-w-[50%] sm:max-w-xs mx-auto px-4 sm:px-6 lg:p-0 py-6">
               <div class="aspect-w-5 aspect-h-6">
                 <img
                   class="object-cover object-center rounded-xl shadow-2xl"
@@ -230,53 +230,7 @@
                 >, an open-source
                 Backend-as-a-Service integrating with AWS. 
               </p>
-              <a
-                class="
-                  mt-6
-                  block
-                  w-full
-                  py-3
-                  px-5
-                  text-center
-                  bg-white 
-                  hover:bg-tealoffcomp
-                  border border-transparent
-                  rounded-md
-                  shadow-md
-                  text-base
-                  font-medium
-                  sm:inline-block
-                  sm:w-auto
-                "
-                href="assets/Pavlo_Artemenko_Resume.pdf"
-                target="_blank"
-                ><span class="text-xl mr-3 leading-3"
-                  ><i class="fas fa-file-alt"></i></span
-                >Resume</a
-              >
-              <a
-                class="
-                  mt-6
-                  sm:mx-2
-                  block
-                  w-full
-                  py-3
-                  px-5
-                  text-center
-                  bg-white
-                  border border-transparent
-                  rounded-md
-                  shadow-md
-                  text-base
-                  font-medium
-                  hover:bg-tealoffcomp
-                  sm:inline-block
-                  sm:w-auto
-                "
-                href="https://bastion-baas.github.io/case-study.html"
-                target="_blank"
-                >Read Bastion Case Study</a
-              >
+            
             </div>
           </div>
         </div>
@@ -287,7 +241,7 @@
     <div class="bg-gradient-to-r from-rose-400 to-orange-300">
       <div class="flex items-center justify-center py-16 px-8">
         <img src="./assets/logo_color.png" class="w-48 pl-8"/>
-        <p class="text-center text-4xl text-gray-900">Backend-as-a-Service Solution</p>
+        <p class="text-center text-3xl sm:text-4xl text-gray-900">Backend-as-a-Service Solution</p>
       </div>
       
       <div id="carouselIndicators" class="carousel carousel-dark slide relative" data-bs-ride="carousel">
@@ -475,30 +429,7 @@
                     A kanban board productivity application for organizing and managing tasks.
                   </p>
                   <p class="mt-3 text-base text-airbytepurple">
-                    Built with React/Redux, Node.js, Express, and MongoDB, 
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-              <div class="flex-shrink-0 p-4 flex justify-center bg-gray-200">
-                <img
-                  class="h-60 drop-shadow-lg filter object-scale-down"
-                  src="assets/TodoApp.png"
-                  alt=""
-                />
-              </div>
-              <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                <div class="flex-1">
-                  <p class="text-xl font-semibold text-gray-900 mt-2">
-                    Todo List 
-                  </p>
-                  <p class="mt-3 text-base text-gray-500">
-                    An interactive todo list manager. Node.js, Handlebars.js, and an Express.js API.
-                  </p>
-                  <p class="mt-3 text-base text-airbytepurple">
-                    Node.js/Express, Handlebars, HTML/CSS
+                    Built with React/Redux, Node.js, Express, and MongoDB
                   </p>
                 </div>
               </div>
@@ -521,7 +452,30 @@
                     RequestBin clone for inspecting and debugging webhooks and HTTP requests.
                   </p>
                   <p class="mt-3 text-base">
-                    Node.js/Express, MongoDB, PostgreSQL, Webhooks
+                    Built with Node.js/Express, MongoDB, PostgreSQL, Webhooks
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
+              <div class="flex-shrink-0 p-4 flex justify-center bg-gray-200">
+                <img
+                  class="h-60 drop-shadow-lg filter object-scale-down"
+                  src="assets/shopping_cart.png"
+                  alt=""
+                />
+              </div>
+              <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+                <div class="flex-1">
+                  <p class="text-xl font-semibold text-gray-900 mt-2">
+                    Shopping Cart
+                  </p>
+                  <p class="mt-3 text-base text-gray-500">
+                    An interactive store for managing inventory and checkout.
+                  </p>
+                  <p class="mt-3 text-base text-airbytepurple">
+                    Built with React/Redux, Node.js/Express, MongoDB, HTML/CSS
                   </p>
                 </div>
               </div>
