added linkedin features

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta name="title" property="og:title" content="Pavlo Artemenko" />
+    <meta name="description" property="og:description" content="Pavlo Artemenko is
+    a full-stack software engineer based in Madison, CT and co-creator of the
+    Bastion Backend-as-a-Service.">
+    <meta name="type" property="og:type" content="website" />
+    <meta name="url" property="og:url" content="https://pavloartemenko.com" />
+    <meta name="image" property="og:image" content="/assets/photo_2" />
+    <meta name="author" content="Pavlo Artemenko">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
