--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     Bastion Backend-as-a-Service.">
     <meta name="type" property="og:type" content="website" />
     <meta name="url" property="og:url" content="https://pavloartemenko.com" />
-    <meta name="image" property="og:image" content="https://pavloartemenko.com/assets/photo_2.png" />
+    <meta name="image" property="og:image" content="https://pavloartemenko.com/assets/og_photo" />
     <meta name="author" content="Pavlo Artemenko">
     <link
       rel="apple-touch-icon"
